--- a/euro-truck-simulator-2config.json
+++ b/euro-truck-simulator-2config.json
@@ -1,72 +1,61 @@
 [
     {
         "DisplayName": "Lobby Name",
-        "Category": "Euro Truck Simulator:stadia_controller",
-        "Subcategory": "Server:dns:1",
-        "Description": "Session name, limited to 63 characters.",
+        "Category": "Server Settings",
+        "Subcategory": "General",
+        "Description": "Name of your server session.",
         "Keywords": "lobby,name",
         "FieldName": "lobby_name",
         "InputType": "text",
-        "IsFlagArgument": false,
         "ParamFieldName": "lobby_name",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "Euro Truck Simulator Server - Powered by AMP",
-        "Placeholder": "Euro Truck Simulator Server - Powered by AMP",
+        "DefaultValue": "Euro Truck Simulator 2 Server",
         "EnumValues": {}
     },
     {
         "DisplayName": "Description",
-        "Category": "Euro Truck Simulator:stadia_controller",
-        "Subcategory": "Server:dns:1",
-        "Description": "Session description, limited to 63 characters.",
-        "Keywords": "lobby,description",
+        "Category": "Server Settings",
+        "Subcategory": "General",
+        "Description": "Description of your server.",
+        "Keywords": "description",
         "FieldName": "description",
         "InputType": "text",
-        "IsFlagArgument": false,
         "ParamFieldName": "description",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "",
+        "DefaultValue": "Welcome to my server!",
         "EnumValues": {}
     },
     {
         "DisplayName": "Welcome Message",
-        "Category": "Euro Truck Simulator:stadia_controller",
-        "Subcategory": "Server:dns:1",
-        "Description": "Session welcome message, limited to 127 characters.",
-        "Keywords": "welcome,message",
+        "Category": "Server Settings",
+        "Subcategory": "General",
+        "Description": "Message shown when players join.",
+        "Keywords": "welcome",
         "FieldName": "welcome_message",
         "InputType": "text",
-        "IsFlagArgument": false,
         "ParamFieldName": "welcome_message",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "",
+        "DefaultValue": "Drive safely!",
         "EnumValues": {}
     },
     {
         "DisplayName": "Password",
-        "Category": "Euro Truck Simulator:stadia_controller",
-        "Subcategory": "Server:dns:1",
-        "Description": "Session password, limited to 63 characters.",
+        "Category": "Server Settings",
+        "Subcategory": "Security",
+        "Description": "Password required to join.",
         "Keywords": "password",
         "FieldName": "password",
         "InputType": "password",
-        "IsFlagArgument": false,
         "ParamFieldName": "password",
-        "IncludeInCommandLine": false,
         "DefaultValue": "",
         "EnumValues": {}
     },
     {
         "DisplayName": "Max Players",
-        "Category": "Euro Truck Simulator:stadia_controller",
-        "Subcategory": "Server:dns:1",
-        "Description": "Maximum players in session. The game can handle 128 players, but the official limit is 8.",
+        "Category": "Server Settings",
+        "Subcategory": "Limits",
+        "Description": "Maximum number of players (Official limit is usually 8).",
         "Keywords": "max,players",
-        "FieldName": "$MaxUsers",
+        "FieldName": "max_players",
         "InputType": "number",
-        "IsFlagArgument": false,
         "ParamFieldName": "max_players",
-        "IncludeInCommandLine": false,
         "DefaultValue": "8",
         "MinValue": "1",
         "MaxValue": "128",
@@ -74,318 +63,74 @@
     },
     {
         "DisplayName": "Max Vehicles Total",
-        "Category": "Euro Truck Simulator:stadia_controller",
-        "Subcategory": "Server:dns:1",
-        "Description": "",
-        "Keywords": "max,vehicles,total",
+        "Category": "Server Settings",
+        "Subcategory": "Limits",
+        "Description": "Max total vehicles allowed.",
+        "Keywords": "vehicles",
         "FieldName": "max_vehicles_total",
         "InputType": "number",
-        "IsFlagArgument": false,
         "ParamFieldName": "max_vehicles_total",
-        "IncludeInCommandLine": false,
         "DefaultValue": "100",
-        "MinValue": "0",
         "EnumValues": {}
     },
     {
-        "DisplayName": "Max AI Vehicles Player",
-        "Category": "Euro Truck Simulator:stadia_controller",
-        "Subcategory": "Server:dns:1",
-        "Description": "",
-        "Keywords": "max,ai,vehicles,player",
-        "FieldName": "max_ai_vehicles_player",
-        "InputType": "number",
-        "IsFlagArgument": false,
-        "ParamFieldName": "max_ai_vehicles_player",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "50",
-        "MinValue": "0",
-        "EnumValues": {}
-    },
-    {
-        "DisplayName": "Max AI Vehicles Player Spawn",
-        "Category": "Euro Truck Simulator:stadia_controller",
-        "Subcategory": "Server:dns:1",
-        "Description": "",
-        "Keywords": "max,ai,vehicles,player,spawn",
-        "FieldName": "max_ai_vehicles_player_spawn",
-        "InputType": "number",
-        "IsFlagArgument": false,
-        "ParamFieldName": "max_ai_vehicles_player_spawn",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "50",
-        "MinValue": "0",
-        "EnumValues": {}
-    },
-    {
-        "DisplayName": "connection_dedicated_port",
-        "Category": "Euro Truck Simulator:stadia_controller",
-        "Subcategory": "Server:dns:1",
-        "Description": "Port used for main game traffic",
-        "Keywords": "",
-        "FieldName": "$MainServerPort",
-        "InputType": "hidden",
-        "IsFlagArgument": false,
-        "ParamFieldName": "connection_dedicated_port",
-        "IncludeInCommandLine": false,
-        "EnumValues": {},
-        "Hidden": true
-    },
-    {
-        "DisplayName": "query_dedicated_port",
-        "Category": "Euro Truck Simulator:stadia_controller",
-        "Subcategory": "Server:dns:1",
-        "Description": "Port used for Steam Query",
-        "Keywords": "",
-        "FieldName": "$QueryDedicatedPort",
-        "InputType": "number",
-        "IsFlagArgument": false,
-        "ParamFieldName": "query_dedicated_port",
-        "IncludeInCommandLine": false,
-        "EnumValues": {},
-        "Hidden": true
-    },
-    {
-        "DisplayName": "Server Logon Token",
-        "Category": "Euro Truck Simulator:stadia_controller",
-        "Subcategory": "Server:dns:1",
-        "Description": "Use appid 227300 to create a [Steam Server Login Token](https://steamcommunity.com/dev/managegameservers).",
-        "Keywords": "server,logon,token",
-        "FieldName": "server_logon_token",
-        "InputType": "text",
-        "IsFlagArgument": false,
-        "ParamFieldName": "server_logon_token",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "",
-        "Placeholder": "6544F7E034119F113526E96474F",
-        "EnumValues": {}
-    },
-    {
-        "DisplayName": "Player Damage",
-        "Category": "Euro Truck Simulator:stadia_controller",
-        "Subcategory": "Server:dns:1",
-        "Description": "Flag to allow players to receive damage from other players.",
-        "Keywords": "player,damage",
-        "FieldName": "player_damage",
-        "InputType": "checkbox",
-        "IsFlagArgument": false,
-        "ParamFieldName": "player_damage",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "true",
-        "EnumValues": {
-            "False": "false",
-            "True": "true"
-        }
-    },
-    {
-        "DisplayName": "Traffic",
-        "Category": "Euro Truck Simulator:stadia_controller",
-        "Subcategory": "Server:dns:1",
-        "Description": "Flag to enable traffic.",
+        "DisplayName": "Enable Traffic",
+        "Category": "Gameplay",
+        "Subcategory": "World",
+        "Description": "Enable AI traffic cars/trucks.",
         "Keywords": "traffic",
         "FieldName": "traffic",
         "InputType": "checkbox",
-        "IsFlagArgument": false,
         "ParamFieldName": "traffic",
-        "IncludeInCommandLine": false,
         "DefaultValue": "true",
-        "EnumValues": {
-            "False": "false",
-            "True": "true"
-        }
+        "EnumValues": { "False": "false", "True": "true" }
     },
     {
-        "DisplayName": "Hide In Company",
-        "Category": "Euro Truck Simulator:stadia_controller",
-        "Subcategory": "Server:dns:1",
-        "Description": "Flag to enable if remote players are hidden in company area.",
-        "Keywords": "hide,company",
-        "FieldName": "hide_in_company",
+        "DisplayName": "Player Damage",
+        "Category": "Gameplay",
+        "Subcategory": "Realism",
+        "Description": "Enable damage between players.",
+        "Keywords": "damage",
+        "FieldName": "player_damage",
         "InputType": "checkbox",
-        "IsFlagArgument": false,
-        "ParamFieldName": "hide_in_company",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "false",
-        "EnumValues": {
-            "False": "false",
-            "True": "true"
-        }
+        "ParamFieldName": "player_damage",
+        "DefaultValue": "true",
+        "EnumValues": { "False": "false", "True": "true" }
     },
     {
-        "DisplayName": "Hide Colliding",
-        "Category": "Euro Truck Simulator:stadia_controller",
-        "Subcategory": "Server:dns:1",
-        "Description": "Flag to hide colliding vehicle after teleport. ",
+        "DisplayName": "Hide Colliding Vehicles",
+        "Category": "Gameplay",
+        "Subcategory": "Realism",
+        "Description": "Hide vehicles that are colliding/stuck.",
         "Keywords": "hide,colliding",
         "FieldName": "hide_colliding",
         "InputType": "checkbox",
-        "IsFlagArgument": false,
         "ParamFieldName": "hide_colliding",
-        "IncludeInCommandLine": false,
         "DefaultValue": "true",
-        "EnumValues": {
-            "False": "false",
-            "True": "true"
-        }
+        "EnumValues": { "False": "false", "True": "true" }
     },
     {
         "DisplayName": "Force Speed Limiter",
-        "Category": "Euro Truck Simulator:stadia_controller",
-        "Subcategory": "Server:dns:1",
-        "Description": "Flag to force speed limiter.",
-        "Keywords": "force,speed,limiter",
+        "Category": "Gameplay",
+        "Subcategory": "Realism",
+        "Description": "Force truck speed limiter (90km/h).",
+        "Keywords": "speed,limiter",
         "FieldName": "force_speed_limiter",
         "InputType": "checkbox",
-        "IsFlagArgument": false,
         "ParamFieldName": "force_speed_limiter",
-        "IncludeInCommandLine": false,
         "DefaultValue": "false",
-        "EnumValues": {
-            "False": "false",
-            "True": "true"
-        }
+        "EnumValues": { "False": "false", "True": "true" }
     },
     {
-        "DisplayName": "Mods Optioning",
-        "Category": "Euro Truck Simulator:stadia_controller",
-        "Subcategory": "Server:dns:1",
-        "Description": "Flag to enable mods marked as optional, to be really optional.",
-        "Keywords": "mods,optioning",
-        "FieldName": "mods_optioning",
-        "InputType": "checkbox",
-        "IsFlagArgument": false,
-        "ParamFieldName": "mods_optioning",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "false",
-        "EnumValues": {
-            "False": "false",
-            "True": "true"
-        }
-    },
-    {
-        "DisplayName": "Timezones",
-        "Category": "Euro Truck Simulator:stadia_controller",
-        "Subcategory": "Server:dns:1",
-        "Description": "Sets whether the timezone updates as players change zones. It displays either the time or the time and timezone information.",
-        "Keywords": "timezones",
-        "FieldName": "timezones",
-        "InputType": "enum",
-        "IsFlagArgument": false,
-        "ParamFieldName": "timezones",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "2",
-        "EnumValues": {
-            "0": "Disabled",
-            "1": "Time Only",
-            "2": "Full Info"
-        }
-    },
-    {
-        "DisplayName": "Service No Collision",
-        "Category": "Euro Truck Simulator:stadia_controller",
-        "Subcategory": "Server:dns:1",
-        "Description": "Disable collisions on service area.",
-        "Keywords": "service,no,collision",
-        "FieldName": "service_no_collision",
-        "InputType": "checkbox",
-        "IsFlagArgument": false,
-        "ParamFieldName": "service_no_collision",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "false",
-        "EnumValues": {
-            "False": "false",
-            "True": "true"
-        }
-    },
-    {
-        "DisplayName": "In Menu Ghosting",
-        "Category": "Euro Truck Simulator:stadia_controller",
-        "Subcategory": "Server:dns:1",
-        "Description": "Disable collisions when game paused.",
-        "Keywords": "in,menu,ghosting",
-        "FieldName": "in_menu_ghosting",
-        "InputType": "checkbox",
-        "IsFlagArgument": false,
-        "ParamFieldName": "in_menu_ghosting",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "false",
-        "EnumValues": {
-            "False": "false",
-            "True": "true"
-        }
-    },
-    {
-        "DisplayName": "Name Tags",
-        "Category": "Euro Truck Simulator:stadia_controller",
-        "Subcategory": "Server:dns:1",
-        "Description": "Show player name tags above vehicles.",
-        "Keywords": "name,tags",
+        "DisplayName": "Show Player Names",
+        "Category": "Gameplay",
+        "Subcategory": "UI",
+        "Description": "Show nametags above trucks.",
+        "Keywords": "nametags",
         "FieldName": "name_tags",
         "InputType": "checkbox",
-        "IsFlagArgument": false,
         "ParamFieldName": "name_tags",
-        "IncludeInCommandLine": false,
         "DefaultValue": "true",
-        "EnumValues": {
-            "False": "false",
-            "True": "true"
-        }
-    },
-    {
-        "DisplayName": "Moderator Count",
-        "Category": "Euro Truck Simulator:stadia_controller",
-        "Subcategory": "Server:dns:1",
-        "Description": "The number of moderators in the Moderator List setting.",
-        "Keywords": "moderator,count",
-        "FieldName": "moderator_list1",
-        "InputType": "number",
-        "IsFlagArgument": false,
-        "ParamFieldName": "moderator_list1",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "0",
-        "Placeholder": "0",
-        "EnumValues": {}
-    },
-    {
-        "DisplayName": "Moderator List",
-        "Category": "Euro Truck Simulator:stadia_controller",
-        "Subcategory": "Server:dns:1",
-        "Description": "Enter moderators, one per line. Increment the value in [#] starting at 0. 123456789 should be replaced with the moderator's Steam64 IDs. e.g. moderator_list[0]: 123456789.",
-        "Keywords": "moderator,list",
-        "FieldName": "moderator_list2",
-        "InputType": "Textarea",
-        "IsFlagArgument": false,
-        "ParamFieldName": "moderator_list2",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "",
-        "EnumValues": {}
-    },
-    {
-        "DisplayName": "Install Beta Branch",
-        "Category": "Updates",
-        "Subcategory": "Steam Downloads:download",
-        "Description": "If enabled, allows beta branches (branches other than the 'public' or stable branch) to be installed. Specify the branch under Selected Beta Branch. Update the server after switching branches",
-        "Keywords": "install,beta",
-        "FieldName": "InstallBeta",
-        "InputType": "checkbox",
-        "ParamFieldName": "InstallBeta",
-        "DefaultValue": "false",
-        "EnumValues": {
-            "False": "false",
-            "True": "true"
-        }
-    },
-    {
-        "DisplayName": "Selected Beta Branch",
-        "Category": "Updates",
-        "Subcategory": "Steam Downloads:download",
-        "Description": "Sets the [beta branch](https://steamdb.info/app/1948160/depots/) to install. Requires Install Beta Branch to be enabled. Set any required password under Beta Password. Update the server after switching branches",
-        "Keywords": "beta,branch",
-        "FieldName": "BetaBranch",
-        "InputType": "text",
-        "ParamFieldName": "BetaBranch",
-        "DefaultValue": "",
-        "Placeholder": "public_beta",
-        "EnumValues": {}
+        "EnumValues": { "False": "false", "True": "true" }
     }
 ]
