--- a/euro-truck-simulator-2metaconfig.json
+++ b/euro-truck-simulator-2metaconfig.json
@@ -3,6 +3,6 @@
         "ConfigFile": "Euro Truck Simulator 2/server_config.sii",
         "AutoMap": true,
         "ConfigType": "template",
-        "ConfigFileTemplate": "euro-truck-simulator-2/AMP_server_config.sii"
+        "ConfigFileTemplate": "euro-truck-simulator-2.sii"
     }
 ]
